# mlops-2025-mlfow

./: hello.py  pyproject.toml
notebooks/: 1.1-TaxiTrips-Tracking.ipynb
scripts/: train_model.py
